patient profile nd rdvs

--- a/src/main/resources/templates/department_list.html
+++ b/src/main/resources/templates/department_list.html
@@ -83,7 +83,14 @@
 		    	</tbody>
 		    
 		    </table>
+		    
+		    <div class="m-t-20 text-center">
+                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
+                                    <i class="fa fa-chevron-left"> </i> Retour</button>
+               </div>
 		 </div>
+		 
+		 
 		    
 </body>
 </html>
