--- a/src/main/resources/templates/includes/admin_side_menu.html
+++ b/src/main/resources/templates/includes/admin_side_menu.html
@@ -4,7 +4,7 @@
             <ul>
                 <li class="menu-title">Main</li>
                 <li class="active">
-                    <a href="index-2.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+                    <a href="/"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
                     <a href="/listdoctors"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
@@ -15,13 +15,13 @@
                 <li>
                     <a href="appointments.html"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="schedule.html"><i class="fa fa-calendar-check-o"></i> <span>Doctor Schedule</span></a>
                 </li>
-                <li>
+                <li> -->
                     <a href="/listdepartments"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
                 </li>
-                <li class="submenu">
+                <!-- <li class="submenu">
                     <a href="#"><i class="fa fa-user"></i> <span> Employees </span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
                         <li><a href="employees.html">Employees List</a></li>
