--- a/src/main/resources/templates/includes/med_side_menu.html
+++ b/src/main/resources/templates/includes/med_side_menu.html
@@ -8,21 +8,21 @@
                     <a href=""><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a id="rdvhref" onclick="redirect()"><i class="fa fa-user-md"></i> <span>My RDV</span></a>
+                    <a id="rdvhref" onclick="redirect()"><i class="fa fa-user-md"></i> <span>My Appointments</span></a>
                 </li>
-                <li>
-                    <a href="patients.html"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
+                 <!--<li>
+                    <a href="/listpatients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
                 </li>
                 <li>
                     <a href="appointments.html"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
                 </li>
-                <li>
+              	<li>
                     <a href="schedule.html"><i class="fa fa-calendar-check-o"></i> <span>Doctor Schedule</span></a>
-                </li>
+                </li> --> 
                 <li>
-                    <a href="departments.html"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
+                    <a href="/listdepartments"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
                 </li>
-                <li class="submenu">
+                <!-- <li class="submenu">
                     <a href="#"><i class="fa fa-user"></i> <span> Employees </span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
                         <li><a href="employees.html">Employees List</a></li>
@@ -157,7 +157,7 @@
                             <a href="javascript:void(0);"><span>Level 0</span></a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
