--- a/src/main/resources/templates/doctors_bydepartment.html
+++ b/src/main/resources/templates/doctors_bydepartment.html
@@ -59,6 +59,7 @@
          <div  class="col-sm-5 col-5">
         	<h1>Doctors</h1>
         </div>
+        
 		    <!--<table border="1">
 		    	<thead>
 		    		<tr>
@@ -103,15 +104,25 @@
                                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_doctor"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
                                 </div>
                             </div>
-                            <h4   th:text= "${staff.LastName} +'&nbsp' +  ${staff.FirstName}" class="doctor-name text-ellipsis"><a href="profile.html">Cristina Groves</a></h4>
+                            <h4   th:text= "${staff.LastName} +'&nbsp' +  ${staff.FirstName}" class="doctor-name text-ellipsis"><a href="profile.html"></a></h4>
                             <div  th:text= "${staff.Email}" class="doc-prof"></div>
                             <div th:text= "${staff.PhoneNumber}" class="doc-prof"></div>
                             <div class="user-country">
-                                <i class="fa fa-map-marker"></i> United States, San Francisco
+                                <i class="fa fa-map-marker"></i> 
                             </div>
                         </div>
                     </div>
+                    
            </div>
-		    
+		    <div class="m-t-20 text-center">
+                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
+                                    <i class="fa fa-chevron-left"><a  th:href="/listdepartments"></a> </i> Retour</button>
+               </div>
+               <div class="m-t-20 text-center">
+                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
+                                    <i class="fa fa-chevron-right"><a  th:href="/"></a> </i> Edit appointment</button>
+               </div>
+               
+               
 </body>
 </html>
