--- a/src/main/resources/templates/doctors_list.html
+++ b/src/main/resources/templates/doctors_list.html
@@ -59,6 +59,10 @@
          <div class="col-sm-5 col-5">
         	<h1>Doctors</h1>
          </div>
+         <div class="m-t-20 text-center">
+                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
+                                    <i class="fa fa-chevron-left"> </i> Retour</button>
+               </div>
 		    <!-- <table border="1">
 		    	<thead>
 		    		<tr>
@@ -106,10 +110,11 @@
                             <div th:text= "${staff.Email}" class="doc-prof"></div>
                             <div th:text= "${staff.PhoneNumber}" class="doc-prof"></div>
                             <div class="user-country">
-                                <i class="fa fa-map-marker"></i> United States, San Francisco
+                                <i class="fa fa-map-marker"></i> 
                             </div>
                         </div>
                     </div>
                </div>
+               
 </body>
 </html>
