--- a/src/main/resources/templates/med/index.html
+++ b/src/main/resources/templates/med/index.html
@@ -21,8 +21,45 @@
     <div th:replace="/includes/header :: header"> </div>
     <!-- menu here -->
     <div th:replace="/includes/med_side_menu :: med_side_menu"> </div>
-    <div class="page-wrapper">
+        <div class="page-wrapper">
         <div class="content">
+         <div class="row mb-3">
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card bg-success text-white h-100">
+                        <div class="card-body bg-success">
+                            <div class="rotate">
+                              <i class="fa fa-user-md fa-4x"></i>
+                            </div>
+                            <h6 class="text-uppercase">Doctors</h6>
+                            <h1 class="display-4">34</h1>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-info h-100">
+                        <div class="card-body bg-info">
+                            <div class="rotate">
+								<i class="fa fa-calendar fa-4x"></i>        
+							</div>
+                            <h6 class="text-uppercase">Appointments</h6>
+                            <h1 class="display-4">125</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-warning h-100">
+                        <div class="card-body">
+                            <div class="rotate">
+                                <i class="fa fa-hospital-o fa-4x"></i>                           
+                            </div>
+                            <h6 class="text-uppercase">Departments</h6>
+                            <h1 class="display-4">14</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
         
     </div>
