--- a/src/main/resources/templates/gp/rdv-details.html
+++ b/src/main/resources/templates/gp/rdv-details.html
@@ -87,7 +87,7 @@
                                                 </li>
                                                 <li>
                                                     <span class="title">Email:</span>
-                                                    <span class="text"><a th:text="${rdv.patient.phoneNumber}"></a></span>
+                                                    <span class="text"><a th:text="${rdv.patient.email}"></a></span>
                                                 </li>
                                                 <li>
                                                     <span class="title">Address:</span>
