--- a/src/main/resources/templates/gp/add-rdv.html
+++ b/src/main/resources/templates/gp/add-rdv.html
@@ -56,7 +56,7 @@
 		                                    <div class="form-group">
 												<label>Nouveau Patient</label>
 											
-												<button type="button" class="form-control btn btn-secondary btn-sm">Ajouter</button>
+												<a href="/gp/addpatient" class="form-control btn btn-secondary btn-sm">Ajouter</a>
 											</div>
 		                                </div>
 		                            </div>
