--- a/src/main/resources/templates/gp/rdv-details.html
+++ b/src/main/resources/templates/gp/rdv-details.html
@@ -48,7 +48,7 @@
                                                 <span style="font-size:15px">
                                                
                                                 <span class="title">Medécin:</span>
-                                                 <span class="text" ></span>
+                                                 <span class="text"  th:text="${rdv.doc.firstName+' '+rdv.doc.LastName}"></span>
                            							 </span>
                             </div>
                             
