--- a/src/main/resources/templates/admin/staff_list.html
+++ b/src/main/resources/templates/admin/staff_list.html
@@ -4,7 +4,7 @@
 <meta charset="ISO-8859-1">
  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
  <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.ico}" >
- <title>Preclinic - Liste des employés</title>
+ <title>Preclinic - Liste des employes</title>
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
  <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" >
@@ -46,7 +46,7 @@
 		    			<td th:text= "${staff.PhoneNumber}" > </td>
 		    			<td th:text= "${staff.Role}"> </td>
 		    			<td > 
-		    				<a th:href="@{'deletestaff/' + ${staff.id}}">Delete</a>
+		    				<a th:href="@{'deletestaff/' + ${staff.id}}" onclick=" confirm('confirmer la suppression !')">Delete</a>
 		    			</td>
 		    		
 		    		</tr>
