--- a/src/main/resources/templates/gp/add-rdv.html
+++ b/src/main/resources/templates/gp/add-rdv.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-      >
+      xmlns:th="http://www.thymeleaf.org">
 
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.ico}" >
+       <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.ico}" >
+
     <meta th:name="_csrf" th:content="${_csrf.token}"/>
     <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Preclinic - Medical & Hospital - Bootstrap 4 Admin Template</title>
@@ -46,7 +45,6 @@
 											<div class="form-group">
 												<label>Patient :</label>
 												<select id="selectpatient" class="select">
-													<option>Select</option>
 													<option value="" selected>choisissez le patient</option>
 													<option th:each="patient : ${patients}" th:value="${patient.id}" th:text="${patient.firstName +' '+patient.lastName}"/>
 												</select>
@@ -112,12 +110,6 @@
 	                            </div>
                 			</div>
                             
-                      </div>
-                      <div class="card-box">
-                      		<div class="form-group">
-                                <label>Message</label>
-                                <textarea cols="30" rows="4" class="form-control" id="message"></textarea>
-                            </div>
                       </div>
                       <div class="m-t-20 text-center">
                                 <button class="btn btn-primary submit-btn">Ajouter le RDV</button>
