--- a/src/main/resources/templates/gp/all-rdv.html
+++ b/src/main/resources/templates/gp/all-rdv.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
       >
 
 
@@ -61,7 +60,7 @@
 								
 									<tr  th:each="rdv : ${rdvs}" th:id="${rdv.id}">
 									     <td th:text="${rdv.patient.firstName+' '+rdv.patient.LastName}"> </td>
-									      <td th:text="${rdv.doc.id}"> </td>
+									      <td th:text="${rdv.doc.firstName+' '+rdv.doc.lastName}"> </td>
 									     <td th:text="${rdv.rdvDate}"> </td>
 									     <td th:text="${rdv.rdvTime}"> </td>
 									     <td th:switch="${rdv.status}">
@@ -72,8 +71,9 @@
 												<div class="dropdown dropdown-action">
 													<a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
 													<div class="dropdown-menu dropdown-menu-right">
-														<a class="dropdown-item" href="edit-appointment.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-														<a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_appointment"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+													    <a class="dropdown-item" th:href="${'/gp/rdv/'+rdv.id}" ><i class="fa fa-eye m-r-5"></i> Consulter</a>
+														<a class="dropdown-item" href="edit-appointment.html"><i class="fa fa-pencil m-r-5"></i> Editer</a>
+														<a class="dropdown-item" th:href="${'/gp/deleterdv/'+rdv.id}"  onclick=" confirm('confirmer la suppression !')" ><i class="fa fa-trash-o m-r-5"></i> Supprimmer</a>
 													</div>
 												</div>
 										</td>
@@ -144,12 +144,12 @@
 		}
 		
 
-		$("tbody tr").click(function() {
+		/*$("tbody tr").click(function() {
             if($(this).attr('id')){
             	
                 window.location = "../rdv/"+$(this).attr('id');
             }
-        });
+        });*/
 		
 	});
 </script>
