--- a/src/main/resources/templates/includes/admin_side_menu.html
+++ b/src/main/resources/templates/includes/admin_side_menu.html
@@ -6,6 +6,14 @@
                 <li class="active">
                     <a href="/"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
+                <hr>
+                 <li>
+                    <a href="/admin/addstaff"><i class="fa fa-user-plus"></i> <span>Ajouter un Staff</span></a>
+                </li>
+                 <li>
+                    <a href="/admin/liststaff"><i class="fa fa-users"></i> <span>liste de Staff</span></a>
+                </li>
+                <hr>
                 <li>
                     <a href="/listdoctors"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
                 </li>
@@ -17,8 +25,8 @@
                 </li>
                 <!-- <li>
                     <a href="schedule.html"><i class="fa fa-calendar-check-o"></i> <span>Doctor Schedule</span></a>
-                </li>
-                <li> -->
+                </li>-->
+                <li> 
                     <a href="/listdepartments"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
                 </li>
                 <!-- <li class="submenu">
