--- a/src/main/resources/templates/gp/patient-profile.html
+++ b/src/main/resources/templates/gp/patient-profile.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datetimepicker.min.css}">
 
 </head>
-<!--/*@thymesVar id="patient" type="com.jee.clinicmanagementsystem.entity.Patient"*/-->
+<!--/@thymesVar id="patient" type="com.jee.clinicmanagementsystem.entity.Patient"/-->
 <body>
 <div class="main-wrapper">
     <div th:replace="/includes/header :: header"> </div>
@@ -26,14 +26,15 @@
         <div class="content">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h4 class="page-title">patient</h4>
+                    <h1 >patient</h1>
                 </div>
+                <br><br><br><br><br>
             </div>
            
                 <div class="col-lg-8 offset-lg-2">
                         <div class="row">
                                 <div class="col-sm-6">
-                                    <div class="form-group">
+                                    <div >
                                     <span class="title">Prénom :</span>
                                      <span class="text" th:text="*{patientByid.firstName}"></span>
                                       
@@ -87,46 +88,63 @@
                                 </div>
                                
                             </div>
+                            <br><br><br> 
+                            <h2>Appointments</h2>
+                            <br> 
                             
-                            <div class="table-responsive">
-							<table class="table table-striped custom-table">
-								<thead>
-									<tr>
-										<th>Patient</th>
-										<th>Médecin </th>
-										<th>Date du RDV</th>
-										<th>Heure du RDV</th>
-										<th>Statut</th>
-										<th class="text-right">Action</th>
-									</tr>
-								</thead>
-								<tbody>
-								
-									<tr  th:each="rdv : ${findRdvBypatientId}" th:id="${rdv.id}">
-									     <td th:text="${rdv.patient.firstName+' '+rdv.patient.LastName}"> </td>
-									      <td th:text="${rdv.medId}"> </td>
-									     <td th:text="${rdv.rdvDate}"> </td>
-									     <td th:text="${rdv.rdvTime}"> </td>
-									     <td th:switch="${rdv.status}">
+                            <div class="card-box profile-header"  th:each="rdv : ${findRdvBypatientId}" th:id="${rdv.id}" >
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="profile-view">
+                               
+                                <div class="profile-basic">
+                                    <div class="row">
+                                        <div class="col-md-0">
+                                            <div class="profile-info-left "style="height: 100%;">
+                                            		
+                                            </div>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <ul class="personal-info">
+                                                <li>
+                                                <span class="title">Doctor :</span>
+                                                <span th:text="${rdv.doc.firstName+' '+rdv.doc.LastName}" class="text"></span></li>
+                                                <li><span class="title">Doctor N°:</span>
+                                                    <span th:text="${rdv.doc.id}" class="text"></span></li>
+                                                <li>
+                                                    <span class="title">date:</span>
+                                                    <span th:text="${rdv.rdvDate}" class="text"></span>
+                                                </li>
+                                                <li>
+                                                     <span class="title">time:</span>
+                                                    <span th:text="${rdv.rdvTime}" class="text"></span>
+                                                </li>
+                                               <li>
+                                                    <span class="title">status:</span>
+                                                    <span th:switch="${rdv.status}">
 									         <span th:case="1"class="custom-badge status-red">Inactive</span>
-									         <span th:case="0"class="custom-badge status-green">Active</span>
-									     </td>
-									     <td class="text-right">
-												<div class="dropdown dropdown-action">
-													<a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-													<div class="dropdown-menu dropdown-menu-right">
-														<a class="dropdown-item" href="edit-appointment.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-														<a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_appointment"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
-													</div>
-												</div>
-										</td>
-								  
-								   
-								   
+									         <span th:case="0"class="custom-badge status-green">Active</span></span>
+                                                </li>
+                                                <li>
+                                                    <span class="title">Email:</span>
+                                                    <span class="text"><a th:text="${rdv.doc.email}"></a></span>
+                                                </li>
+                                                
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>                        
+                        </div>
+                    </div>
+                </div>
+                <br>
+                
+                
+                                          
+                <br><br> <br><br><br> 
+												
 									
-									
-								</tbody>
-							</table>
 							<div class="alert alert-dark text-center" style=""
 							 th:if="${findRdvBypatientId.empty}"><strong>pas de rendez-vous !</strong>
 							 </div>
