--- a/src/main/resources/templates/gp/facture.html
+++ b/src/main/resources/templates/gp/facture.html
@@ -158,7 +158,7 @@
 <script th:src="@{/js/Chart.bundle.js}"></script>
 <script th:src="@{/js/chart.js}"></script>
 <script th:src="@{/js/app.js}"></script>
-<script defer>
+<script defer th:inline="javascript">
 
          function quantityinputchange(input){
                 var quantity = $(this).val();
@@ -197,11 +197,12 @@
                   }    
 
            function imprimer() {
+        	   var filename =  [[${rdv.patient.firstName}]]+'_'+[[${rdv.patient.lastName}]]+'_'+[[${rdv.id}]]+'.pdf';
             var doc = new jsPDF();
             doc.addHTML($('#facturediv')[0], 15, 15, {
               'background': '#fff',
             }, function() {
-              doc.save('sample-file.pdf');
+              doc.save(filename);
             });
           }; 
     </script>
